style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    background-color:red;
    
}
button{
    text-decoration: none;
    border-radius: 50%;
}

.header .content .footer{
    display: flex;
    justify-content: center;
    align-items: center;
}

.calc{
    flex:1;
    width: 400px;
    height: 600px;
    border-radius: 10%;
    

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color:black;
}

.calc-button{
    width: 80px;
    height: 80px;
    aspect-ratio: 1/1;
    background-color:white;
    border: 2px solid black;
    font-weight: bolder;
    font-size: larger;
    font-family: 'Scientific Calculator LCD', sans-serif;

    
}
.calc-row{
    gap: 10px;
   
}
.calc-display{
    height: 75px;
    width:300px;
    background-color:#333;
    border:3px solid black;
    font-weight:bolder;
    font-size: 30px;
    font-family:'Scientific Calculator LCD', sans-serif ;
    text-align: right;
    
    color: white;
    border-radius: 10%;
    margin-bottom: 20px;
    
}

.heading{
    font-family:'Scientific Calculator LCD', sans-serif ;
    color:white;
    font-weight: bolder;
    font-stretch: extra-expanded;
}

p{
    font-family:'Scientific Calculator LCD', sans-serif;
    font-weight: bold;
}

a{
    color:inherit;
    text-decoration: none;
}

